[package]
name = "openglm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bytes = "1.6.0"
reqwest = {version = "0.12.2", features = ["json"]}
ring = "0.17.8"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"

[dev-dependencies]
tokio = {version = "1.36.0", features = ["rt", "macros"]}
